# AI-Improv-Toolkit

./: .ansible-lint  .editorconfig  .gitattributes  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  Development.md  Dockerfile  ETHICS_FAQ.md  Ethics.md  LICENSE.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-install.sh  pre-start.sh
.github/: SECURITY.md  copilot-instructions.md  dependabot.yml
code/: .dockerignore  Dockerfile  README.md  cheat_sheet.md  main.py  pyproject.toml
code/common/: __init__.py  config.py  dataTypes.py  helpers.py  nats.py
code/common/webrtc/: messages.py  webrtc_signal.py
code/config/: __init__.py  config.py
code/frontend/: __init__.py  _button.py  _config.py  frontend.py
code/ingest/: __init__.py  _audio.py  _button.py  _config.py  _mic_to_rtp.py  _mic_to_webrtc.py  _sound_hardware.py  dataTypes.py  ingest.py  internal.toml  wire.py
code/settings/: README.md  pyproject.toml  setting.txt
code/settings/config/: config.example.toml
code/settings/tests/config/: bad_extra_setting.toml  bad_past_mvp.toml  bad_violate_ethics_1.toml  bad_violate_ethics_2.toml  good.toml
code/sharedCode/: README.md  config.py  main.py  pyproject.toml
code/sharedCode/testing/: good_config.toml
code/testing/: good_config.toml
infra/: README.md  cheat_sheet.md  manual_setup.md  pkiGEN.sh  pki_manager.sh  show-ingest-config.md  show-ingest-config.old.md
infra/analysis-node/: .terraform.lock.hcl  README.md  cloud-init.yaml.tftpl  main.tf  (+4 more)
secrets/: infra.env.sh.example
(+57 files in other folders)
