[project]
name = "AI-Show-toolkit"
version = "0.1.0"
description = "A toolkit for AI improv show applications."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "evdev>=1.9.2",
    "nats-py>=2.12.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]
