[project]
name = "AI-Show-toolkit"
version = "0.1.0"
description = "A toolkit for AI improv show applications."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiortc>=1.14.0",
    "evdev>=1.9.2",
    "nats-py>=2.12.0",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "sounddevice>=0.5.5",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]
[tool.ruff]
line-length = 120
